--- a/Informatics.html
+++ b/Informatics.html
@@ -11,7 +11,7 @@
 
 
 
-<title>About This Website</title>
+<title>Programming</title>
 
 <script src="site_libs/header-attrs-2.6/header-attrs.js"></script>
 <script src="site_libs/jquery-1.11.3/jquery.min.js"></script>
@@ -303,12 +303,31 @@ $(document).ready(function () {
 
 
 
-<h1 class="title toc-ignore">About This Website</h1>
+<h1 class="title toc-ignore">Programming</h1>
 
 </div>
 
 
-<p>More about this website.</p>
+<div id="linux" class="section level4">
+<h4>Linux</h4>
+<p><a href="https://en.wikipedia.org/wiki/History_of_Linux">Linux</a> is a family of open source <strong>Unix-like</strong> operating systems based on the Linux kernel.</p>
+<p>My computer runs <a href="https://ubuntu.com/">Ubuntu</a>, a desktop distro derived from Debian, maintained by <a href="https://canonical.com/">Canonical Ltd</a>.</p>
+<p>Check out what is coming : <a href="https://www.omgubuntu.co.uk/">UbuntuNews</a>.</p>
+</div>
+<div id="r" class="section level4">
+<h4>R</h4>
+<p><strong>R</strong> is a programming language and free software environment supported by the <a href="https://www.r-project.org/foundation/">R Foundation for Statistical Computing</a>.</p>
+<p>My activities focused on <strong>data manipulation</strong>, <strong>calculation</strong> and <strong>graphical representations</strong> concerning genomics.</p>
+<p>Each <strong>script</strong> is designed to be <strong>implemented</strong> inside a pipeline.</p>
+<p><a href="https://www.rstudio.com">RStudio</a> is the IDE I exploit.</p>
+</div>
+<div id="bash" class="section level4">
+<h4>BASH</h4>
+<p><strong>BASH</strong> is the GNU Project’s shell.</p>
+<p>In my routine BASH finds space both in <strong>servers dialogue</strong> and <strong>jobs control</strong>.</p>
+<p>In parallel BASH supplies the programming language I adopt as <strong>scaffold</strong> for organizing <strong>bioinformatic pipelines</strong>.</p>
+<p><a href="https://wiki.gnome.org/Apps/Gedit">GEDIT</a> and <a href="https://www.thegeekdiary.com/basic-vi-commands-cheat-sheet/">vi</a> are the text editors I prefer.</p>
+</div>
 
 
 
