--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 
 
-<title>My Website</title>
+<title>‘welcome welcome!’ cit.</title>
 
 <script src="site_libs/header-attrs-2.6/header-attrs.js"></script>
 <script src="site_libs/jquery-1.11.3/jquery.min.js"></script>
@@ -286,7 +286,10 @@ $(document).ready(function () {
   <a href="index.html">Home</a>
 </li>
 <li>
-  <a href="about.html">About</a>
+  <a href="Informatics.html">Programming</a>
+</li>
+<li>
+  <a href="biology.html">Biology</a>
 </li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
@@ -300,7 +303,7 @@ $(document).ready(function () {
 
 
 
-<h1 class="title toc-ignore">My Website</h1>
+<h1 class="title toc-ignore">‘welcome welcome!’ cit.</h1>
 
 </div>
 
