--- a/RCose.html
+++ b/RCose.html
@@ -11,7 +11,7 @@
 
 
 
-<title>About Me</title>
+<title>RCose</title>
 
 <script src="site_libs/header-attrs-2.6/header-attrs.js"></script>
 <script src="site_libs/jquery-1.11.3/jquery.min.js"></script>
@@ -312,16 +312,16 @@ $(document).ready(function () {
 
 
 
-<h1 class="title toc-ignore">About Me</h1>
+<h1 class="title toc-ignore">RCose</h1>
 
 </div>
 
 
-<p><img style="float: left;" src="images/foto%20nico.jpg" ></p>
-<p>  I am a PhD student in <em>Evolutionary Genomics</em> at the <a href="https://ircan.org/en/">IRCAN institute</a> Faculté de Médecine in <a href="http://www.nice.fr/fr/">Nice-Ville</a> in <a href="https://litilab.wordpress.com/">Gianni Liti’s team</a>.</p>
-<p>  My research interests are in <em>evolutionary genomics</em> and <em>bionformatics</em> methods for studying how genomes change.</p>
-<p>  I graduated in Molecular Biotechnology in 2018 at The University of Florence.</p>
-<p>  I am an R person, even if I do not disdain other languages.</p>
+<p>Welcome in <a href="www.thisisthelinktotheblog">RCose</a> intro.</p>
+<p>RCose from italian R and Cose (laterally R <em>things</em> or <em>stuff</em>) is a collection of raw R posts without any claim.</p>
+<p>RCose is not an alternative to R classes but just a way for sharing a point of view, a strategy, knowledge and an excuse to keep track of what I learn.</p>
+<p>Feel free to comment (be polite and informal).</p>
+<p>BTW, I am a newbie in R ! :)</p>
 
 
 
