--- a/about.html
+++ b/about.html
@@ -286,10 +286,19 @@ $(document).ready(function () {
   <a href="index.html">Home</a>
 </li>
 <li>
-  <a href="Informatics.html">Programming</a>
+  <a href="programming.html">Programming</a>
 </li>
 <li>
   <a href="biology.html">Biology</a>
+</li>
+<li>
+  <a href="documents.html">Documents</a>
+</li>
+<li>
+  <a href="blog.html">Communication</a>
+</li>
+<li>
+  <a href="contacts.html">Contacts</a>
 </li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
