--- a/blog.html
+++ b/blog.html
@@ -11,7 +11,7 @@
 
 
 
-<title>About Me</title>
+<title>Communication</title>
 
 <script src="site_libs/header-attrs-2.6/header-attrs.js"></script>
 <script src="site_libs/jquery-1.11.3/jquery.min.js"></script>
@@ -312,16 +312,24 @@ $(document).ready(function () {
 
 
 
-<h1 class="title toc-ignore">About Me</h1>
+<h1 class="title toc-ignore">Communication</h1>
 
 </div>
 
 
-<p><img style="float: left;" src="images/foto%20nico.jpg" ></p>
-<p>  I am a PhD student in <em>Evolutionary Genomics</em> at the <a href="https://ircan.org/en/">IRCAN institute</a> Faculté de Médecine in <a href="http://www.nice.fr/fr/">Nice-Ville</a> in <a href="https://litilab.wordpress.com/">Gianni Liti’s team</a>.</p>
-<p>  My research interests are in <em>evolutionary genomics</em> and <em>bionformatics</em> methods for studying how genomes change.</p>
-<p>  I graduated in Molecular Biotechnology in 2018 at The University of Florence.</p>
-<p>  I am an R person, even if I do not disdain other languages.</p>
+<hr />
+<div id="social-content-curator" class="section level5">
+<h5>SOCIAL CONTENT CURATOR</h5>
+<p>Sharing <em>scientifically valid contents</em> by social media platforms is becoming indispensable in a world where <em>tweets</em> run faster than journal publications.</p>
+<p>I am part of a group composed of four <em>phD students</em>, one <em>principal investigator</em> and <em>university collaborators</em> that is taking care of the social contents of our research institute <a href="https://ircan.org/en/">IRCAN</a>.</p>
+<p>IRCAN on <a href="https://twitter.com/ircaninstitute"><em>twitter</em></a></p>
+<hr />
+</div>
+<div id="the-blog-rcose" class="section level5">
+<h5>THE BLOG : RCOSE</h5>
+<p><a href="www.thisisthelinktotheblog">RCose</a> (the link will be available soon) (from italian <em>R</em> and <em>Cose</em> literally R <em>things</em> or <em>stuff</em>) is a collection of raw <em>R posts</em> without any claim.</p>
+<p>RCose is <strong>not</strong> an alternative to R classes but just a way for sharing <em>point of views</em>, <em>strategies</em>, <em>knowledge</em> and an excuse to keep track of what I learn.</p>
+</div>
 
 
 
