--- a/documents.html
+++ b/documents.html
@@ -11,7 +11,7 @@
 
 
 
-<title>About Me</title>
+<title>Documents</title>
 
 <script src="site_libs/header-attrs-2.6/header-attrs.js"></script>
 <script src="site_libs/jquery-1.11.3/jquery.min.js"></script>
@@ -312,16 +312,28 @@ $(document).ready(function () {
 
 
 
-<h1 class="title toc-ignore">About Me</h1>
+<h1 class="title toc-ignore">Documents</h1>
 
 </div>
 
 
-<p><img style="float: left;" src="images/foto%20nico.jpg" ></p>
-<p>  I am a PhD student in <em>Evolutionary Genomics</em> at the <a href="https://ircan.org/en/">IRCAN institute</a> Faculté de Médecine in <a href="http://www.nice.fr/fr/">Nice-Ville</a> in <a href="https://litilab.wordpress.com/">Gianni Liti’s team</a>.</p>
-<p>  My research interests are in <em>evolutionary genomics</em> and <em>bionformatics</em> methods for studying how genomes change.</p>
-<p>  I graduated in Molecular Biotechnology in 2018 at The University of Florence.</p>
-<p>  I am an R person, even if I do not disdain other languages.</p>
+<hr />
+<div id="articles" class="section level4">
+<h4>Articles</h4>
+<div id="section" class="section level5">
+<h5>2020</h5>
+<p>Lorenzo Tattini, <strong>Nicolò Tellini</strong> […] Gianni Liti. 2019. “Accurate Tracking of the Mutational Landscape of Diploid Hybrid Genomes.” <em>Molecular Biology and Evolution</em> 36 (12): 2861–77. <a href="https://doi.org/10.1093/molbev/msz177" class="uri">https://doi.org/10.1093/molbev/msz177</a>.</p>
+<hr />
+</div>
+</div>
+<div id="certificates" class="section level4">
+<h4>Certificates</h4>
+<div id="section-1" class="section level5">
+<h5>2020</h5>
+<p>Data Camp - Introduction to R - <a href="https://drive.google.com/file/d/196OZh_dvMoMVdN1rjOE6qUrP7B7cWV7o/view?usp=sharing">pdf</a> (<a href="https://www.datacamp.com/courses/free-introduction-to-r">link to the course</a>)</p>
+<p>Microsoft EdX course - Introduction to R for data science - <a href="https://www.edx.org/school/microsoft">pdf</a></p>
+</div>
+</div>
 
 
 
