--- a/programming.html
+++ b/programming.html
@@ -11,7 +11,7 @@
 
 
 
-<title>About Me</title>
+<title>Programming</title>
 
 <script src="site_libs/header-attrs-2.6/header-attrs.js"></script>
 <script src="site_libs/jquery-1.11.3/jquery.min.js"></script>
@@ -312,16 +312,34 @@ $(document).ready(function () {
 
 
 
-<h1 class="title toc-ignore">About Me</h1>
+<h1 class="title toc-ignore">Programming</h1>
 
 </div>
 
 
-<p><img style="float: left;" src="images/foto%20nico.jpg" ></p>
-<p>  I am a PhD student in <em>Evolutionary Genomics</em> at the <a href="https://ircan.org/en/">IRCAN institute</a> Faculté de Médecine in <a href="http://www.nice.fr/fr/">Nice-Ville</a> in <a href="https://litilab.wordpress.com/">Gianni Liti’s team</a>.</p>
-<p>  My research interests are in <em>evolutionary genomics</em> and <em>bionformatics</em> methods for studying how genomes change.</p>
-<p>  I graduated in Molecular Biotechnology in 2018 at The University of Florence.</p>
-<p>  I am an R person, even if I do not disdain other languages.</p>
+<hr />
+<div id="linux" class="section level4">
+<h4>LINUX</h4>
+<p><a href="https://en.wikipedia.org/wiki/History_of_Linux">Linux</a> is a family of open source <strong>Unix-like</strong> operating systems based on the Linux kernel.</p>
+<p>My computer runs <a href="https://ubuntu.com/">Ubuntu</a>, a desktop distro derived from Debian, maintained by <a href="https://canonical.com/">Canonical Ltd</a>.</p>
+<p>Check out what is coming : <a href="https://www.omgubuntu.co.uk/">UbuntuNews</a>.</p>
+<hr />
+</div>
+<div id="r" class="section level4">
+<h4>R</h4>
+<p><strong>R</strong> is a programming language and free software environment supported by the <a href="https://www.r-project.org/foundation/">R Foundation for Statistical Computing</a>.</p>
+<p>My activities focused on <strong>data manipulation</strong>, <strong>calculation</strong> and <strong>graphical representations</strong> concerning genomics.</p>
+<p>Each <strong>script</strong> is designed to be <strong>implemented</strong> inside a pipeline.</p>
+<p><a href="https://www.rstudio.com">RStudio</a> is the IDE I exploit.</p>
+<hr />
+</div>
+<div id="bash" class="section level4">
+<h4>BASH</h4>
+<p><strong>BASH</strong> is the GNU Project’s shell.</p>
+<p>In my routine BASH finds space both in <strong>servers dialogue</strong> and <strong>jobs control</strong>.</p>
+<p>In parallel BASH supplies the programming language I adopt as <strong>scaffold</strong> for organizing <strong>bioinformatic pipelines</strong>.</p>
+<p><a href="https://wiki.gnome.org/Apps/Gedit">GEDIT</a> and <a href="https://www.thegeekdiary.com/basic-vi-commands-cheat-sheet/">vi</a> are the text editors I prefer.</p>
+</div>
 
 
 
