--- a/contacts.html
+++ b/contacts.html
@@ -11,7 +11,7 @@
 
 
 
-<title>About Me</title>
+<title>Contacts</title>
 
 <script src="site_libs/header-attrs-2.6/header-attrs.js"></script>
 <script src="site_libs/jquery-1.11.3/jquery.min.js"></script>
@@ -312,16 +312,14 @@ $(document).ready(function () {
 
 
 
-<h1 class="title toc-ignore">About Me</h1>
+<h1 class="title toc-ignore">Contacts</h1>
 
 </div>
 
 
-<p><img style="float: left;" src="images/foto%20nico.jpg" ></p>
-<p>  I am a PhD student in <em>Evolutionary Genomics</em> at the <a href="https://ircan.org/en/">IRCAN institute</a> Faculté de Médecine in <a href="http://www.nice.fr/fr/">Nice-Ville</a> in <a href="https://litilab.wordpress.com/">Gianni Liti’s team</a>.</p>
-<p>  My research interests are in <em>evolutionary genomics</em> and <em>bionformatics</em> methods for studying how genomes change.</p>
-<p>  I graduated in Molecular Biotechnology in 2018 at The University of Florence.</p>
-<p>  I am an R person, even if I do not disdain other languages.</p>
+<p>Twitter : <a href="https://twitter.com/nicolo_tellini">Nicolò Tellini</a></p>
+<p>Linkedin : <a href="https://www.linkedin.com/in/nicol%C3%B2-tellini-165460177/">Nicolò Tellini</a></p>
+<p>email : <a href="mailto:nicolo.tellini@unice.fr" class="email">nicolo.tellini@unice.fr</a></p>
 
 
 
